@@ -1,6 +1,7 @@
 CHANGELOG
 
 UNRELEASED
+  * FIX : #29 Avoid callback for outdated queries
   * FIX : #92 Parameters that can be set in the dashboard shouldn't have
   defaults
   * FEATURE : #70 Ability to get all refined values : helper.getRefinements(
